# kitsunesoft

./: DependencyGraph.gv  README.md
builds/: README.md
devlog/: april-may-jun-2015.md
sources/: README.md
sources/dawjo/: CMakeLists.txt  README.md  compile-params-template.sh  cross-compile.sh  output.txt
sources/dawjo/cmake/Modules/: FindRtAudio.cmake
sources/dawjo/src/: CMakeLists.txt
sources/dawjo/test/: CMakeLists.txt
